# cf-aoi

./: .gitattributes  .gitignore  cf-aoi.code-workspace
control/: CLAUDE.md
control/src/: App.axaml  App.axaml.cs  CfAoiControl.csproj  Program.cs  ViewLocator.cs  app.manifest  appsettings.json
control/src/Controllers/: ConnectionManager.cs  GrabClient.cs  IHeartbeatClient.cs  IpClient.cs  UpstreamServer.cs  UpstreamWiring.cs
control/src/Controls/: DefectOverlayControl.cs  RoiImageView.axaml  RoiImageView.axaml.cs
control/src/Converters/: AppConverters.cs
control/src/Models/: ArrayTopologyModel.cs  CamNodesModel.cs  CamParamsModel.cs  CameraInfoModel.cs  DefectResultModel.cs  FrameHolder.cs  RecipeModel.cs  RecipeSavingModel.cs  ShareSettingModel.cs  SystemConfigModel.cs  ZoneSettingModel.cs
control/src/Services/: AppServices.cs  ConfigLoader.cs  LogService.cs  OfflineReviewService.cs  PitchEstimator.cs  RecipeService.cs  RecipeStore.cs  SelfTest.cs
control/src/Styles/: Controls.axaml  ThemeConsole.axaml  ThemeLab.axaml
control/src/ViewModels/: DefectSortViewModel.cs  MainWindowViewModel.cs  RemoteImageBrowserViewModel.cs  SingleCcdSetupViewModel.cs  Step1ViewModel.cs  SystemSettingsViewModel.cs  ViewModelBase.cs  ZoneParamEditorViewModel.cs
control/src/Views/: DefectSortView.axaml  DefectSortView.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  RemoteImageBrowserView.axaml  RemoteImageBrowserView.axaml.cs  RemoteImagePickerHelper.cs  SingleCcdSetupView.axaml  SingleCcdSetupView.axaml.cs  Step1View.axaml  Step1View.axaml.cs  SystemSettingsView.axaml  SystemSettingsView.axaml.cs  ZoneParamEditorView.axaml  ZoneParamEditorView.axaml.cs
control/src/config/: array_topology.example.json
docs/: CLAUDE.md  HANDOVER_spark_20260615.md  PROMPTS.md  SETUP.md  STATUS.md  SUB_pipeline_port_plan.md  SUB_pipeline_verification_20260623.html  architecture_audit_20260712.md  control_程式完整說明.md  fusion_algorithm_analysis_20260623.html  grab_程式完整說明.md  ip_程式完整說明.md  rdma_replay_驗證報告_20260623.html  roi_pattern_matching_座標轉換複查.html  tools_程式完整說明.md
docs/html/: build_manual.py  cf-aoi-training.html  control.html  grab.html  incident-viewer.html  index.html  ip.html  tools.html  workflow.html
docs/html/assets/: app.js  styles.css
docs/html/demo_diag/: 20260712.jsonl  incident_20260712_053710_819.json  incident_20260712_053711_616.json
docs/verification/: capacity_2spark_checklist.md  step1_mac_verify_checklist.md  verification_report_20260611.md  verification_report_arm_20260615.md  verification_report_step2_20260615.md
docs/verification/baseline_x86/: clean_x86.json  realistic_x86.json
grab/: CLAUDE.md  CMakeLists.txt  cam_config.json
grab/src/: cam_manager.cpp  cam_manager.h  cam_mean_gray_test.cpp  cam_pylon.cpp  cam_pylon.h  control_server.cpp  control_server.h  image_replay_sender.cpp  main.cpp  probe_cam_nodes.cpp  rdma_common.h  rdma_nslot_test.cpp  rdma_sender.cpp  rdma_sender.h
ip/: CLAUDE.md  CMakeLists.txt
ip/config/: config_optimized.ini  config_real.ini  default_zone.ini
ip/models/gpu_model/: rf_metadata.json
ip/src/: align_engine.cpp  align_engine.h  align_verify.cpp  control_server.cpp  control_server.h  coord_verify.cpp  defect_rules.h  edge_check.cpp  edge_check.h  edge_verify.cpp  main.cpp  result_saver.cpp  result_saver.h  rules_verify.cpp
ip/src/ai/: ai_kernels.cu  rf_model_config.h  tensor_core_classifier.h
ip/src/config/: align_roi_config.h  config_parser.h  inline_types.h  recipe_saving_config.h  share_flags.h  zone_config_adapter.cpp  zone_config_adapter.h
ip/src/diag/: flight_recorder.cpp  flight_recorder.h
ip/src/gpu/: cuda_kernels.cu  cuda_kernels.h  defect_info.h  gpu_pipeline.cpp  gpu_pipeline.h
ip/src/image_source/: file_source.cpp  file_source.h  image_source.h  rdma_common.h  rdma_source.cpp  rdma_source.h  source_image_writer.h  tcp_source.cpp  tcp_source.h
recipes/DEFAULT/IP0/: RecipeInfo.xml
recipes/UI_RT/IP0/: RecipeInfo.xml
scripts/: bootstrap.sh  build-control-app.sh  compare_results.py  control_test.py  doctor.py  estimate_pitch.py  make_t550_recipe.py  run-control.command  run-upstream-sim.command  run.sh  upstream_simulator.py  verify_alignment.py  verify_coord.py  verify_flight_src.py  verify_flight_v2.py  verify_list_during_grab.py  verify_rdma_replay.py  verify_recipe_roundtrip.py  verify_remote_image.py  verify_rules_edge.py  verify_sprint_存圖控制.py  verify_step3_trigger.py
scripts/launchers/: Control-Linux.sh  Control-Mac.command  Control-Windows.bat  Grab-Linux.sh  IP-Linux.sh  README.md  UpstreamSim-Mac.command  UpstreamSim-Windows.bat  golden_maker-Linux.sh
shared/: FrameHeader.h
tools/: README.md
tools/golden_maker/: CMakeLists.txt  golden_maker.cpp
